--- a/config.yml
+++ b/config.yml
@@ -2,7 +2,7 @@
 #   Bei Rechtschreibfehlern bitte kontaktieren
 #   Kontakt: grabenkind@gmail.com
 #   
-#   Dieses Plugin wird von hackerG7 entwickelt!
+#   Dieses Plugin wird von SlothCodes entwickelt!
 #   Alle Fehler die keine Rechtschreibfehler sind,
 #   müssen dem Entwickler selbst berichtet werden.
 
